cabal-version:      3.0
name:               ppad-bip39
version:            0.1.0
synopsis:           BIP39 mnemonic codes.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  [BIP39](https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki)
  mnemonic codes for deterministic key generation.

source-repository head
  type:     git
  location: git.ppad.tech/bip39.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.KDF.BIP39
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-pbkdf
    , ppad-sha256
    , ppad-sha512
    , primitive

test-suite bip39-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , array
    , bytestring
    , ppad-base16
    , ppad-bip39
    , tasty
    , tasty-hunit

benchmark bip39-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , array
    , bytestring
    , criterion
    , deepseq
    , ppad-bip39

