cabal-version:      3.0
name:               ppad-bip39
version:            0.3.3
synopsis:           BIP39 mnemonic codes.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
extra-source-files:
  etc/english.txt
  etc/chinese_simplified.txt
  etc/chinese_traditional.txt
  etc/czech.txt
  etc/french.txt
  etc/italian.txt
  etc/japanese.txt
  etc/korean.txt
  etc/portuguese.txt
  etc/spanish.txt

description:
  [BIP39](https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki)
  mnemonic codes for deterministic key generation.

flag llvm
  description: Use GHC's LLVM backend.
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git.ppad.tech/bip39.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  if flag(llvm)
    ghc-options: -fllvm -O2
  exposed-modules:
      Crypto.KDF.BIP39
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-pbkdf >= 0.2.2 && < 0.3
    , ppad-sha256 >= 0.3.2 && < 0.4
    , ppad-sha512 >= 0.2.2 && < 0.3
    , primitive >= 0.8 && < 0.10
    , text >= 2.1 && < 2.2
    , text-icu >= 0.8 && < 0.9

test-suite bip39-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
    Vectors

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , aeson
    , array
    , bytestring
    , ppad-base16
    , ppad-bip32
    , ppad-bip39
    , tasty
    , tasty-hunit
    , text
    , text-icu
    , vector

benchmark bip39-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , array
    , bytestring
    , criterion
    , deepseq
    , ppad-bip39

